# Stats-Research

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: doge_analysis.ipynb  employment.ipynb  info.ipynb  separations.ipynb
scripts/: data_loader.py  opm_to_r2.py
